# gyeol

./: .gitignore  AGENTS.md  analysis_options.yaml  index.html  package.json  pnpm-lock.yaml  pubspec.yaml  tsconfig.app.json
.opencode/agents/: analyzer.md  dart-engineer.md  flutter-engineer.md  frontend-engineer.md  quality-guard.md  rust-engineer.md
docs/domain/: README.md  architecture.md  code-reference.md  conventions.md  glossary.md
lib/: main.dart
lib/engine/: layer_registry.dart  message_bus.dart  scheduler.dart
lib/providers/: anthropic_provider.dart  custom_provider.dart  lllm_provider.dart  model_fetcher.dart  ollama_provider.dart  openai_provider.dart  provider_factory.dart  providers.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: execution.rs  layer.rs  mod.rs  settings.rs  task.rs  worker.rs
src-tauri/src/engine/: evaluator.rs  layer.rs  message_bus.rs  mod.rs  queue.rs  scheduler.rs  task.rs  worker.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/store/: sqlite.rs
src/lib/: api.ts  utils.ts
src/pages/: Dashboard.tsx  Layers.tsx  Monitoring.tsx  PromptEditor.tsx  Settings.tsx  Workers.tsx
src/stores/: appStore.ts
src/types/: index.ts
test/: main_test.dart
test/engine/: message_bus_test.dart  scheduler_test.dart  scheduler_thread_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+146 files in other folders)
